[package]
name = "rust_realtime_table"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["ws"]}
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.40" 
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
futures = "0.3"